correct faq button visibility when faq tab is active

--- a/webplugin/css/app/mck-tab-visibility.css
+++ b/webplugin/css/app/mck-tab-visibility.css
@@ -76,7 +76,7 @@
   display: none !important;
 }
 #mck-sidebox-content.active-tab-faqs #km-faq {
-  display: block !important;
+  display: none !important;
 }
 
 #mck-sidebox-content.active-tab-faqs.active-subsection-faq-category {
