--- a/webplugin/scss/components/_km-tab-visibility-faqs.scss
+++ b/webplugin/scss/components/_km-tab-visibility-faqs.scss
@@ -10,7 +10,7 @@
         display: none !important;
     }
     #km-faq {
-        display: block !important;
+        display: none !important;
     }
 }
 
